[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/btree/script/btree.gd" type="Script" id=1]
[ext_resource path="res://scenes/bots/_ais/_base/_BaseAI.gd" type="Script" id=2]
[ext_resource path="res://assets/bots/sfx_AI_Detect.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 1000.0

[node name="AI" type="Node2D"]
script = ExtResource( 2 )

[node name="BTREE" type="Node" parent="."]
script = ExtResource( 1 )
tree = {
"connection": [ {
"from": "sequence",
"from_port": 0,
"to": "minim_node3",
"to_port": 0
}, {
"from": "root",
"from_port": 0,
"to": "sequence",
"to_port": 0
} ],
"nodes": [ {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"data": {
"connection": [ {
"from": "selector",
"from_port": 0,
"to": "task3",
"to_port": 0
}, {
"from": "selector",
"from_port": 1,
"to": "task2",
"to_port": 0
} ],
"nodes": [ {
"child": [  ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}, {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"root": {
"child": [ {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}
},
"label": "has enemy?",
"offset": Vector2( 100, 300 ),
"size": Vector2( 236, 83 )
},
"name": "minim_node3",
"type": 99
} ],
"data": {
"count": 2,
"offset": Vector2( -100, 400 ),
"size": Vector2( 119, 91 )
},
"name": "sequence",
"type": 2
} ],
"data": {
"offset": Vector2( -300, 400 ),
"size": Vector2( 96, 82.0006 )
},
"name": "root",
"type": 0
}, {
"child": [ {
"child": [  ],
"data": {
"data": {
"connection": [ {
"from": "selector",
"from_port": 0,
"to": "task3",
"to_port": 0
}, {
"from": "selector",
"from_port": 1,
"to": "task2",
"to_port": 0
} ],
"nodes": [ {
"child": [  ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}, {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"root": {
"child": [ {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}
},
"label": "has enemy?",
"offset": Vector2( 100, 300 ),
"size": Vector2( 236, 83 )
},
"name": "minim_node3",
"type": 99
} ],
"data": {
"count": 2,
"offset": Vector2( -100, 400 ),
"size": Vector2( 119, 91 )
},
"name": "sequence",
"type": 2
}, {
"child": [  ],
"data": {
"data": {
"connection": [ {
"from": "selector",
"from_port": 0,
"to": "task3",
"to_port": 0
}, {
"from": "selector",
"from_port": 1,
"to": "task2",
"to_port": 0
} ],
"nodes": [ {
"child": [  ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}, {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"root": {
"child": [ {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}
},
"label": "has enemy?",
"offset": Vector2( 100, 300 ),
"size": Vector2( 236, 83 )
},
"name": "minim_node3",
"type": 99
} ],
"root": {
"child": [ {
"child": [ {
"child": [  ],
"data": {
"data": {
"connection": [ {
"from": "selector",
"from_port": 0,
"to": "task3",
"to_port": 0
}, {
"from": "selector",
"from_port": 1,
"to": "task2",
"to_port": 0
} ],
"nodes": [ {
"child": [  ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}, {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"root": {
"child": [ {
"child": [  ],
"data": {
"fn": "task_is_enemy_instance_valid",
"offset": Vector2( -400, 100 ),
"params": [  ],
"size": Vector2( 318, 85 ),
"values": [  ]
},
"name": "task3",
"type": 1
}, {
"child": [  ],
"data": {
"fn": "task_get_enemy",
"offset": Vector2( -400, 200 ),
"params": [  ],
"size": Vector2( 254, 85 ),
"values": [  ]
},
"name": "task2",
"type": 1
} ],
"data": {
"count": 2,
"offset": Vector2( -600, 100 ),
"size": Vector2( 112, 91 )
},
"name": "selector",
"type": 3
}
},
"label": "has enemy?",
"offset": Vector2( 100, 300 ),
"size": Vector2( 236, 83 )
},
"name": "minim_node3",
"type": 99
} ],
"data": {
"count": 2,
"offset": Vector2( -100, 400 ),
"size": Vector2( 119, 91 )
},
"name": "sequence",
"type": 2
} ],
"data": {
"offset": Vector2( -300, 400 ),
"size": Vector2( 96, 82.0006 )
},
"name": "root",
"type": 0
}
}
run_on = 1

[node name="DetectionRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 1 )

[node name="Rays" type="Node2D" parent="."]

[node name="Target" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 1000, 0 )

[node name="Velocity" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 70, 0 )

[node name="LookAt" type="RayCast2D" parent="Rays"]
enabled = true
cast_to = Vector2( 1000, 0 )

[node name="FleeRays" type="Node2D" parent="."]

[node name="R0" type="RayCast2D" parent="FleeRays"]
position = Vector2( 0, 1 )
cast_to = Vector2( 300, 0 )

[node name="Pos" type="Position2D" parent="FleeRays/R0"]
position = Vector2( 300, 0 )

[node name="R1" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 212, 212 )

[node name="Pos" type="Position2D" parent="FleeRays/R1"]
position = Vector2( 212, 212 )

[node name="R2" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 0, 300 )

[node name="Pos" type="Position2D" parent="FleeRays/R2"]
position = Vector2( 0, 300 )

[node name="R3" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( -212, 212 )

[node name="Pos" type="Position2D" parent="FleeRays/R3"]
position = Vector2( -212, 212 )

[node name="R4" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( -300, 0 )

[node name="Pos" type="Position2D" parent="FleeRays/R4"]
position = Vector2( -300, 0 )

[node name="R5" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( -212, -212 )

[node name="Pos" type="Position2D" parent="FleeRays/R5"]
position = Vector2( -212, -212 )

[node name="R6" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 0, -300 )

[node name="Pos" type="Position2D" parent="FleeRays/R6"]
position = Vector2( 0, -300 )

[node name="R7" type="RayCast2D" parent="FleeRays"]
cast_to = Vector2( 212, -212 )

[node name="Pos" type="Position2D" parent="FleeRays/R7"]
position = Vector2( 212, -212 )

[node name="ResumeTimer" type="Timer" parent="."]
one_shot = true

[node name="FoundTarget" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_DetectionRange_body_exited"]
[connection signal="timeout" from="ResumeTimer" to="." method="_on_ResumeTimer_timeout"]
